harmony/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: harmonyapi
spec:
  ports:
    - name: http
      port: 8080
      targetPort: http
  selector:
    name: harmonyapi
